<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
 
  <groupId>nl.cwi.swat</groupId>
  <artifactId>pampas-solver</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
 
  <name>Pampas Solver</name>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <repositories>
    <repository>
      <id>usethesource</id>
      <url>http://nexus.usethesource.io/content/repositories/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <!-- Hash Trie datastructure needed for Relations -->
    <dependency>
      <groupId>io.usethesource</groupId>
      <artifactId>capsule</artifactId>
      <version>0.6.1</version>
    </dependency>

    <!-- Z3 SMT solver -->
    <!--<dependency>-->
      <!--<groupId>org.sosy-lab</groupId>-->
      <!--<artifactId>javasmt-solver-z3</artifactId>-->
      <!--<version>z3-4.4.1-788-g8df145d</version>-->
    <!--</dependency>-->

    <!-- Cache implementation -->
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>2.6.2</version>
    </dependency>

    <!-- Dependency injection -->
    <dependency>
      <groupId>com.google.dagger</groupId>
      <artifactId>dagger</artifactId>
      <version>2.15</version>
    </dependency>

    <dependency>
      <groupId>com.google.dagger</groupId>
      <artifactId>dagger-compiler</artifactId>
      <version>2.15</version>
    </dependency>

    <!-- Extra Type Annotations -->
    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations-java5</artifactId>
      <version>16.0.1</version>
    </dependency>

    <!-- Logging dependencies -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.11.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.11.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.9.8</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>2.9.5</version>
      <scope>runtime</scope>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.3.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
